# startrek

./: Makefile.am  autogen.sh  common.h  configure.ac  events.c  events.h  input.c  input.h  list.h  screen.c  screen.h  sprite.c  sprite.h  starfield.c  starfield.h  startrek.c
data/: startrek.pal
